NXP-33313: cleanup / format