@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2024 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -192,7 +192,7 @@ public class TestMultiTenantService {
         try (Session session = directoryService.open(TENANTS_DIRECTORY)) {
             DocumentModelList docs = session.query(new QueryBuilder(), false);
             assertEquals(1, docs.size());
-            DocumentModel doc = docs.get(0);
+            DocumentModel doc = docs.getFirst();
             assertEquals(domain.getName(), doc.getPropertyValue("tenant:id"));
             assertEquals(domain.getTitle(), doc.getPropertyValue("tenant:label"));
         }
@@ -291,7 +291,7 @@ public class TestMultiTenantService {
 
             List<DocumentModel> groups = userManager.searchGroups((String) null);
             assertEquals(1, groups.size());
-            DocumentModel group = groups.get(0);
+            DocumentModel group = groups.getFirst();
             assertEquals("tenant_" + domain.getName() + "_testGroup", group.getPropertyValue("group:groupname"));
             assertEquals(domain.getName(), group.getPropertyValue("group:tenantId"));
         }
@@ -324,7 +324,7 @@ public class TestMultiTenantService {
             DocumentModel doc = frySession.getDocument(domain.getRef());
             ACP acp = doc.getACP();
             ACL acl = acp.getOrCreateACL();
-            acl.add(0, new ACE(nuxeoGroup.getName(), "Write", true));
+            acl.addFirst(new ACE(nuxeoGroup.getName(), "Write", true));
             doc.setACP(acp, true);
             frySession.saveDocument(doc);
             frySession.save();
