@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2024 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -77,7 +77,7 @@ public class TestTenantIsolationByDefault {
         try (Session session = directoryService.open(TENANTS_DIRECTORY)) {
             DocumentModelList docs = session.query(new QueryBuilder(), false);
             assertEquals(1, docs.size());
-            DocumentModel doc = docs.get(0);
+            DocumentModel doc = docs.getFirst();
             assertEquals(domain.getName(), doc.getPropertyValue("tenant:id"));
             assertEquals(domain.getTitle(), doc.getPropertyValue("tenant:label"));
         }
