@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2017 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2017-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,15 +15,14 @@
  *
  * Contributors:
  *     Funsho David
- *
  */
 package org.nuxeo.directory.test;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 import static org.nuxeo.directory.test.AbstractDirectoryTest.checkQueryResult;
 
 import java.io.Serializable;
@@ -128,7 +127,7 @@ public class TestDirectorySchemaPrefix {
             filter.put("username", "user_1");
             filter.put("firstName", "f");
             DocumentModelList list = session.query(filter);
-            DocumentModel docModel = list.get(0);
+            DocumentModel docModel = list.getFirst();
             assertEquals("user_1", docModel.getProperty(SCHEMA, "username"));
             assertEquals("f", docModel.getProperty(SCHEMA, "firstName"));
         }
@@ -142,19 +141,12 @@ public class TestDirectorySchemaPrefix {
             checkQueryResult(session, queryBuilder, "Administrator", "user_1", "user_3");
 
             // cannot filter on password
-            queryBuilder = new QueryBuilder().predicate(Predicates.eq("password", "pw"));
-            try {
-                session.query(queryBuilder, false);
-                fail("should throw");
-            } catch (DirectoryException e) {
-                assertEquals("Cannot filter on password", e.getMessage());
-            }
-            try {
-                session.queryIds(queryBuilder);
-                fail("should throw");
-            } catch (DirectoryException e) {
-                assertEquals("Cannot filter on password", e.getMessage());
-            }
+            DirectoryException e;
+            var passwordQueryBuilder = new QueryBuilder().predicate(Predicates.eq("password", "pw"));
+            e = assertThrows(DirectoryException.class, () -> session.query(passwordQueryBuilder, false));
+            assertEquals("Cannot filter on password", e.getMessage());
+            e = assertThrows(DirectoryException.class, () -> session.queryIds(passwordQueryBuilder));
+            assertEquals("Cannot filter on password", e.getMessage());
         }
     }
 
